src/snapshots/afrotd__parser__tests__rule_8.6.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 8
  - 6
  - 1
title: Wann zuerkannt
text: "Es ist ein Touchback, wenn:\n\ta) der Ball, ausgenommen durch einen unvollständigen Vorwärtspass, hinter einer Goalline im Aus dead wird oder im Besitz eines Spielers dead wird und sich der Ball in, über oder hinter der Goalline des ballbesitzenden Teams befindet oder der Regel nach dead wird und das Team, das diese Goalline angreift, dafür verantwortlich ist, dass der Ball sich dort befindet (Regeln 7.2.4.c) (A.R. 7.2.4.I, A.R. 8.6.1.I bis 8.6.1.III).\n\tb) ein Kick gemäß der Regel hinter der Goalline des verteidigenden Teams dead wird und das angreifende Team dafür verantwortlich ist, dass sich der Kick dort befindet (Ausnahme: Regel 8.4.2.b) (A.R. 6.3.4.III)."
interpretations: []
