src/snapshots/afrotd__parser__tests__rule_9.1.10.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 10
title: Chop Block
text: Chop Blocks sind verboten (Regel 2.3.3) (A.R. 9.1.10.I bis 9.1.10.V).
interpretations: []
